--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
+    "firebase": "^11.9.1",
     "next": "13.5.11",
     "react": "^18",
     "react-dom": "^18"
