--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "firebase": "^11.9.1",
     "next": "13.5.11",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-query": "^3.39.3",
+    "swiper": "^11.2.8"
   },
   "devDependencies": {
     "@types/node": "^20",
