--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
     "firebase": "^11.9.1",
+    "framer-motion": "^10.18.0",
     "next": "13.5.11",
     "react": "^18",
     "react-dom": "^18",
