--- a/.env
+++ b/.env
@@ -5,3 +5,7 @@ NEXT_PUBLIC_STORAGE_BUCKET = my-account-55599.firebasestorage.app
 NEXT_PUBLIC_MESSAGING_SENDER_ID = 564994959093
 NEXT_PUBLIC_APP_ID = 1:564994959093:web:7d5ed89fe5e4858a1787bc
 NEXT_PUBLIC_MEASUREMENT_ID = G-YDTQKK5LFR
+
+api_key= AIzaSyCNxfRcW9ArAsAxFIjhT64FAB7bDbxP4K0
+GOOGLE_ID = 649784559786-qndr0k3uf78672c4jug43k53777ie6cp.apps.googleusercontent.com
+GOOGLE_CLIENT_SECRET = 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
