--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
+    "date-fns": "^2.30.0",
     "firebase": "^11.9.1",
     "framer-motion": "^10.18.0",
     "next": "13.5.11",
@@ -18,6 +19,7 @@
     "react": "^18",
     "react-dom": "^18",
     "react-infinite-scroll-component": "^6.1.0",
+    "react-markdown": "^9.1.0",
     "react-query": "^3.39.3",
     "swiper": "^11.2.8"
   },
